--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p><em>PS: Don't Actually Follow the Instruction I am not a good cook :)</em></p>
         <ul>
         <li><a href="recipes/pizza.html">Pizza</a></li>
-        <li><a href="">Placeholder Recipe 2</a></li>
-        <li><a href="">Placeholder Recipe 3</a></li>
+        <li><a href="recipes/apple-jelly.html">Apple Jelly</a></li>
+        <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
         </ul>
     </body>
 </html>
