add basic formatting to texts

--- a/recipes/apple-jelly.html
+++ b/recipes/apple-jelly.html
@@ -11,26 +11,28 @@
     
     <img src="../img/apple-jelly.jpeg" height="300" width="360">
     <h3>Description</h3>
-    <p>Apple jelly is a sweet, transparent preserve made from cooked and strained apple juice, 
+    <p><strong>Apple jelly</strong> is a sweet, transparent preserve made from
+        cooked and strained apple juice, 
         sugar, and pectin, characterized by its smooth, uniform texture, 
         clear appearance, and delicate, crisp apple flavor. It is a versatile spread enjoyed 
         on toast and scones, used as a glaze for meats and pastries, or paired with savory items
-         like cheese and roast chicken.Apple jelly is a sweet, 
-         transparent preserve made from cooked and strained apple juice, 
-         sugar, and pectin, characterized by its smooth, uniform texture, 
-         clear appearance, and delicate, crisp apple flavor. 
-         It is a versatile spread enjoyed on toast and scones, used as a glaze for 
-         meats and pastries, or paired with savory items like cheese and roast chicken.
+        like cheese and roast chicken.<strong>Apple jelly</strong> is a sweet, 
+        transparent preserve made from cooked and strained apple juice, 
+        sugar, and pectin, characterized by its smooth, uniform texture, 
+        clear appearance, and delicate, crisp apple flavor. 
+        It is a versatile spread enjoyed on toast and scones, used as a glaze for 
+        meats and pastries, or paired with savory items like cheese and roast chicken.
     </p>
 
     <h3>Ingredients</h3>
 
     <ul>
-        <li>3 1/2 pounds ooking apples such as Braeburn, Granny Smith, and/ or Rome Beauty</li>
-        <li>3 cups water</li>
-        <li>1 cup apple juice, or up to 2 cups as needed</li>
-        <li>1 (1.75 ounce) package regular powdered fruit pectin or 6 tablespoons classic powdered fruit pectin</li>
-        <li>7 1/2 cups white sugar</li>
+        <li>3 1/2 pounds <strong>cooking apples</strong> such as Braeburn, Granny Smith,
+        and/ or Rome Beauty</li>
+        <li>3 cups <strong>water</strong></li>
+        <li>1 cup <strong>apple juice</strong>, or up to 2 cups as needed</li>
+        <li>1 (1.75 ounce) package regular <strong>powdered fruit pectin</strong> or 6 tablespoons classic powdered fruit pectin</li>
+        <li>7 1/2 cups <strong>white sugar</strong></li>
     </ul>
 
     <h3>Steps</h3>
