--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -11,7 +11,7 @@
     
     <img src="../img/apple-pie.jpeg" height="300" width="330">
     <h3>Description</h3>
-    <p>Apple pie is a double-crusted pastry dessert featuring a sweet, 
+    <p><strong>Apple pie</strong> is a double-crusted pastry dessert featuring a sweet, 
         spiced apple filling with a flaky, buttery crust. 
         It's a classic, iconic American dessert often associated with fall and holidays, 
         typically served warm with vanilla ice cream (à la mode), whipped cream, 
@@ -22,26 +22,26 @@
     <h3>Ingredients</h3>
 
     <ul>
-        <li>1 (9-inch) deep dish pie crust</li>
-        <li>4 large tomatoes, peeled and sliced</li>
-        <li>½ pound bacon - cooked, drained, and chopped</li>
-        <li>3 green onions, thinly sliced</li>
-        <li>½ cup chopped fresh basil</li>
-        <li>1 teaspoon dried oregano</li>
-        <li>½ teaspoon garlic powder</li>
-        <li>½ teaspoon crushed red pepper</li>
-        <li>2 cups shredded Cheddar cheese</li>
-        <li>¼ cup mayonnaise</li>
+        <li>1 (9-inch) deep dish <strong>pie crust</strong></li>
+        <li>4 large <strong>tomatoes</strong>, peeled and sliced</li>
+        <li>½ pound <strong>bacon</strong> - cooked, drained, and chopped</li>
+        <li>3 green <strong>onions</strong>, thinly sliced</li>
+        <li>½ cup chopped <strong>fresh basil</strong></li>
+        <li>1 teaspoon <strong>dried oregano</strong></li>
+        <li>½ teaspoon <strong>garlic powder</strong></li>
+        <li>½ teaspoon crushed <strong>red pepper</strong></li>
+        <li>2 cups shredded <strong>Cheddar cheese</strong></li>
+        <li>¼ cup <strong>mayonnaise</strong></li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
-        <li>Gather all ingredients. Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>Gather all ingredients. Preheat the oven to <em>375 degrees F</em>.</li>
         <li>In alternating layers, fill pie crust with tomatoes, bacon, 
             green onions, basil, oregano, garlic powder, and red pepper.</li>
         <li>Stir together cheese and mayonnaise in a small bowl.</li>
         <li>Spread over the top of pie. Cover loosely with aluminum foil.</li>
-        <li>Bake in the preheated oven for 30 minutes. Remove foil and continue baking for 30 more minutes.</li>
+        <li>Bake in the preheated oven for <em>30 minutes</em>. Remove foil and continue baking for <em>30 more minutes</em>.</li>
         <li>Serve pie warm or cold.</li>
     </ol>
 </body>
