--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,7 +11,7 @@
     
     <img src="../img/pizza.jpg" height="300" width="330">
     <h3>Description</h3>
-    <p>Pizza is a popular Italian dish consisting of a flat,
+    <p><stong>Pizza</stong> is a popular Italian dish consisting of a flat,
         baked bread dough base topped with tomato sauce, 
         cheese, and other ingredients like meat, vegetables, and herbs. 
         It originated in Naples in the 19th century and is known for its quick, 
@@ -22,20 +22,20 @@
     <h3>Ingredients</h3>
 
     <ul>
-        <li>1 1/2 cups (355 ml) warm water (105°F-115°F)</li>
-        <li>1 package (2 1/4 teaspoons) active dry yeast</li>
-        <li>3 3/4 cups (490g) bread flour</li>
-        <li>2 tablespoons extra virgin olive oil (omit if cooking pizza in a wood-fired pizza oven)</li>
-        <li>2 teaspoons kosher salt</li>
-        <li>Extra virgin olive oil</li>
+        <li>1 1/2 cups <em>(355 ml)</em> <strong>warm water</strong> <em>(105°F-115°F)</em></li>
+        <li>1 package (2 1/4 teaspoons) active <strong>dry yeast</strong></li>
+        <li>3 3/4 cups <em>(490g)</em> <strong>bread flour</strong></li>
+        <li>2 tablespoons extra <strong>virgin olive oil</strong> </li>
+        <li>2 teaspoons <strong>kosher salt</strong></li>
+        <li>Extra <strong>virgin olive oil</strong></li>
         <li>Cornmeal</li>
         <li>Tomato sauce</li>
-        <li>Mushrooms, very thinly sliced if raw, otherwise first sautéed</li>
-        <li>Bell peppers, stems and seeds removed, very thinly sliced</li>
-        <li>Italian pepperoncini, thinly sliced</li>
-        <li>Sliced black olives</li>
-        <li>Chopped fresh basil</li>
-        <li>Onions, thinly sliced raw or caramelized</li>
+        <li><Strong>Mushrooms</Strong>, very thinly sliced if raw, otherwise first sautéed</li>
+        <li><strong>Bell peppers</strong>, stems and seeds removed, very thinly sliced</li>
+        <li>Italian <strong>pepperoncini</strong>, thinly sliced</li>
+        <li>Sliced <strong>black olives</strong></li>
+        <li>Chopped <strong>fresh basil</strong></li>
+        <li><strong>Onions</strong>, thinly sliced raw or caramelized</li>
     </ul>
 
     <h3>Steps</h3>
