--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p><em>PS: Don't Actually Follow the Instruction I am not a good cook :)</em></p>
+        <p><em>PS: Don't Actually Follow the Instructions I am not a good cook :)</em></p>
         <ul>
         <li><a href="recipes/pizza.html">Pizza</a></li>
         <li><a href="recipes/apple-jelly.html">Apple Jelly</a></li>
